--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ section p {
   max-width: 100%;
   height: 250px;
   width: 250px;
+  border: 3px solid rgb(163, 173, 167);
+  border-radius: 7px;
+
+  /*border: 3px solid rgb(59, 230, 136); */
 }
 
 .project-tile p {
